:bug: Remove z-index attribute on project cover
Fixes #131

--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -58,11 +58,8 @@
             float: right;
             position: relative;
             display: block;
-            width: 300px;
-            height: 190px;
             border-radius: 5px;
             background-color: rgba($gray1, .6);
-            border: 1px solid rgba($gray1, .6);
 
             img {
                 display: block;
@@ -74,7 +71,7 @@
                 transition: all .2s ease-out;
                 opacity: 1;
                 transition: opacity .3s;
-                z-index: 9000;
+                border: 1px solid rgba($gray1, .6);
 
                 &[data-src] {
                     opacity: 0;
